<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choose_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="@dimen/margin_small"
        android:text="@string/text_configure_search"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_big"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/configure_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:padding="@dimen/margin_small"
        android:scrollingCache="false"
        android:smoothScrollbar="true"
        app:layout_constraintTop_toBottomOf="@+id/choose_text"
        app:layout_constraintBottom_toTopOf="@+id/configure_enable_voice_search"/>

    <CheckBox
        android:id="@+id/configure_enable_voice_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/text_enable_voice_search"
        android:padding="@dimen/margin_small"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toTopOf="@id/configure" />

    <Button
        android:id="@+id/configure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="4dip"
        android:layout_marginTop="@dimen/margin_huge"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/text_widget_configure"
        android:padding="@dimen/margin_small"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
